--- a/result.tex
+++ b/result.tex
@@ -254,7 +254,7 @@ For $d_c \gtrsim 32$  $\upmu$m on, the individual resonances are similar to thos
 %}}}
 \paragraph{Effects of the wire radius $\rho_w$}%{{{
 The dependence of the resonant frequency $f_c$ on the wire radius, Fig. \ref{fg_CutWires_wirecut2um_wireradiusscan}, is somewhat more complicated: For thin enough wires in the $a=100$ $\upmu$m unit cell, the resonant frequency decreases with growing $\rho_w$, since the inter-wire capacity increases. 
-For high enough $\rho_w$ an opposite mechanism prevails; $f_c(\rho_w)$ then starts growing as a result of reduction of the wire inductance.
+For high enough $\rho_w$ the opposite mechanism prevails; $f_c(\rho_w)$ then starts growing as a result of reduction of the wire inductance.
 
 While the changes in the cut-wire radius $\rho_w$ relatively weakly influence the resonant frequency, they have a  major impact on the \textit{strength}\index{resonance!strength of} of the individual resonances. Thick wires lead to a stronger reflectance out of resonances, which also reflects itself in the wider band gap in Fig. \ref{fg_CutWires_wirecut2um_wireradiusscan}c.
 
@@ -277,7 +277,7 @@ The sample presented above in Fig. \ref{fg_bousek}, though not applicable as a m
 \begin{overpic}[width=.85\textwidth]{img-expe/bousek.pdf}\end{overpic}
 \end{figure}
 A much better match was obtained by simple elongation of the conductive stripes to 40 $\upmu$m (blue line in Fig. \ref{fg_bousekspectra}). This may reflect the fact that the wires were surrounded by highly doped, conductive zones of silicon.
-Although not taking into account the dissipative losses, such a simulation correctly identifies the resonance freqeuncy of the stripes. It also, at least quantitatively, matches the asymmetric spectral shape, which is caused by the onset of diffraction into the silicon substrate at $f_c = c/(50\;$ $\upmu$m$)/N_{\text{Si}} \approx 1730$ GHz. 
+Although not taking into account the dissipative losses, such a simulation identifies correctly the resonance frequency of the stripes. It also, at least quantitatively, matches the asymmetric spectral shape, which is caused by the onset of diffraction into the silicon substrate at $f_c = c/(50\;$ $\upmu$m$)/N_{\text{Si}} \approx 1730$ GHz. 
 
 The presented simulations were not optimized for the dissipative losses in silicon, which could be modelled with more detailed knowledge of the structure preparation. %TODO unduplicate rewrite?
 
@@ -296,9 +296,9 @@ The presented simulations were not optimized for the dissipative losses in silic
 \paragraph{Resonances with magnetic dipole moment}%{{{
 The fundamental resonance in a cut wire has an electric dipole moment only. The resonant magnetic field circulates around the wire and due to its rotational symmetry along the $x$-axis, the magnetic dipole moment is zero. Other structures can support resonances without symmetry with regard to the $x$-axis, thus having a magnetic dipole moment.
 
-One of the simplest examples is formed by bending a wire into a "C"-shaped \textit{split-ring resonator}\index{split-ring resonator!spectra} (SRR). To reduce the resonant frequency, capacitor pads can be added to the cut, as shown in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment, and will be denoted simply as the \textit{magnetic resonance}\index{resonance!individual magnetic}. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
+One of the simplest examples is formed by bending a wire into a "C"-shaped \textit{split-ring resonator}\index{split-ring resonator!spectra} (SRR). To reduce the resonant frequency without changing the SRR diameter, capacitor pads can be added to the cut, as shown in a side view in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment, and it will be denoted simply as the \textit{magnetic resonance}\index{resonance!individual magnetic}. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
 
-The very concept of SRR is at least as old as the Hertz's experiments with the spark-gap transmitter from 1880s.
+The very concept of SRR is at least as old as the Hertz's experiments with the spark-gap transmitter from the 1880s.
 As described in the historical review of Ref. \cite[pp. 120--126]{solymar2009waves}, first SRR arrays were built in the early 1980s with the aim to build an effective medium with highly lossy complex permeability; a decade later asymmetric SRRs were used to achieve strong bianisotropy. Many publications cite Refs. \cite{pendry1999magnetism,pendry2000negative} from Pendry et al. as the first application of SRR array for achieving negative effective permeability and index of refraction, respectively. Since then, the number of SRR-related publications has grown rapidly. 
 \label{negn_srr}
 
@@ -327,7 +327,7 @@ At higher frequencies, outside the range of Fig. \ref{fg_SRR_principles}, the SR
 \paragraph{Antiresonances in local effective parameters}%{{{
 In the case of symmetric split-ring resonators, the first resonance possesses only the magnetic dipole moment, as follows from the symmetry of the resonant fields. This fact implies a strong resonant behaviour of the permeability $\meff(f)$ (green curve in Fig. \ref{fg_SRR_principles}e, between 600 and 700~GHz). 
 
-The permittivity spectrum $\eeff(f)$ is, however, also affected by the magnetic dipole resonance  (Fig. \ref{fg_SRR_principles}d). The impact of the magnetic resonance on $\eeff(f)$ is several times weaker than on $\meff(f)$, and more importantly, it has an opposite sign: The real part of $\eeff'(f)$ is reduced at frequencies below the resonance, and enhanced above it. Simultaneously, in the chosen $e^{\ii\omega t}$ convention, the positive sign of the imaginary part $\eeff''(f)$ would imply an amplification of the electric field oscillating around 650~GHz, which is impossible in a structure composed of lossy materials only. This feature in the spectrum is sometimes described as an \textit{antiresonance}\index{antiresonance} and has incited much discussion in the literature \cite{koschny2003resonant, wallen2011anti}. 
+The permittivity spectrum $\eeff(f)$ is, however, also affected by the magnetic dipole resonance  (Fig. \ref{fg_SRR_principles}d). The impact of the magnetic resonance on $\eeff(f)$ is several times weaker than on $\meff(f)$, and more importantly, it has the opposite sign: The real part of $\eeff'(f)$ is reduced at frequencies below the resonance, and enhanced above it. Simultaneously, in the chosen $e^{\ii\omega t}$ convention, the positive sign of the imaginary part $\eeff''(f)$ would imply an amplification of the electric field oscillating around 650~GHz, which is impossible in a structure composed of lossy materials only. This feature in the spectrum is sometimes described as an \textit{antiresonance}\index{antiresonance} and has incited much discussion in the literature \cite{koschny2003resonant, wallen2011anti}. 
 %}}}
 \paragraph{Physical relevance of effective parameters in their local approximation}%{{{
 We believe that the influence of a magnetic resonance on $\eeff(f)$, or conversely, of an electric resonance of $\meff(f)$, is a mere artifact of approximating a strongly nonlocal structure with a concept of local effective parameters. It can be shown that antiresonances become stronger at higher frequencies, as the wavelength $2\pi/K$ becomes similar to the unit cell size $a$. 
@@ -385,7 +385,7 @@ A similar way of operation is achieved by structures which extend infinitely in 
 
 The metallic \textit{cut-wire pair}\index{metamaterial!cut-wire pair}, or also \textit{strip pair}\index{metamaterial!strip pair}, metamaterial depicted in Fig. \ref{fg_SRRothers}f, was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator flattened along the direction of the wave vector. The geometry is tuned so that the electric and magnetic resonances overlap.	
 
-At the radio freuqency range up to 100s MHz, each split-ring resonator can be connected to a small electric circuit which may provide gain \cite{jelinek2011fet} in the metamaterial. The effective parameter spectra of such an active metamaterial do not have to conform to the Kramers-Kronig relations anymore.
+At the radio freuqency range up to 100s MHz, each split-ring resonator can be connected to a small electric circuit which may provide gain \cite{jelinek2011fet} in the metamaterial. The effective parameter spectra of such an active metamaterial do not have to conform to the Kramers-Kronig relations anymore, since the spectrum of the medium response may acquire any sign of its imaginary part.
 
 %}}}
 \paragraph{SRR in a wire array} %{{{
@@ -429,7 +429,7 @@ In all cases, the outer ring radius was $\rho = 30$ $\mu$m, conductor cross-sect
 \end{tabular}
 \end{figure}
 \begin{figure}[h] \caption[Dispersion curves for split-ring resonator with and without a wire mesh (comparison of the CDH and s-parameter results)]{Current-driven homogenisation results, shown as bubbles,  indicating the dispersion curves 
-	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} the same with a wire mesh. The area of each bubble corresponds to the relative amplitude of the respective harmonic component at the given frequency. The results of the scattering-parameters method are overlayed as green lines; these show the same data as the green and blue solid lines from Fig. \ref{fg_SRR_principles}c. In the right panel, the negative-index range of frequencies between 630 and 670~GHz was mirrored against the $K=0$ vertical axis and plotted by a dashed green line.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
+	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} the same with a wire mesh. The area of each bubble corresponds to the relative amplitude of the respective harmonic component at the given frequency, as detected by the FDM algorithm; the blue shading on the background denotes the amplitude of the excited electric field as computed directly by Fourier transform.\\The results of the scattering-parameters method are overlayed as green lines; these show the same data as the green and blue solid lines from Fig. \ref{fg_SRR_principles}c. \\To save plotting spacee, in the right panel, the negative-index range of frequencies between 630 and 670~GHz was mirrored against the $K=0$ vertical axis and plotted by a dashed green line.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
 	% TODO recalculate and update
 	\vspace{.1\textwidth}
 	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR.pdf}  
@@ -488,9 +488,9 @@ The frequency of the electric resonance is tuned by the series capacitor radius 
 
 By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. This is the conventional approach to design a metamaterial with a negative index of refraction; applying it to the electro-magnetic resonator leads to an array of independent, separate elements, which may be an advantage over embedding SRRs in a wire array. One of the means of tuning the  frequency of the antiparallel electric resonance is to divide the central bar by an \textit{inner}\index{inner} capacitor as shown in Fig. \ref{fg_SRR_elmag}b. 
 
-If the inner capacitor is relatively small, with inner capacitor radius $\rho_c = 6$ $\upmu$m, the electric resonance is located around 1150~GHz, and it shifts down to 940~GHz when $\rho_c$ is increased to 8 $\upmu$m. By contrast, the magnetic resonance is virtually independent of $\rho_c$ and remains close to 800~GHz. Both individual resonances can be clearly identified in the spectra by the points of zero transmittance and by the corresponding steep, but still continuous, drops in the refractive index (red and light green curves in Fig. \ref{fg_emSRR_icr}).  For $\rho_c \leq 8$ $\upmu$m, the resonances are separated by a photonic band, indicating that the regions of  $\eeff(f) < 0$ and $\meff(f) < 0$ do not overlap. 
+If the inner capacitor is relatively small, with inner capacitor radius $\rho_c = 6$ $\upmu$m, the electric resonance is located around 1150~GHz, and it shifts down to 940~GHz when $\rho_c$ is increased to 8 $\upmu$m. By contrast, the magnetic resonance is virtually independent of $\rho_c$ and remains close to 800~GHz. Both individual resonances can be identified clearly in the spectra by the points of zero transmittance and by the corresponding steep, but still continuous, drops in the refractive index (red and light green curves in Fig. \ref{fg_emSRR_icr}).  For $\rho_c \leq 8$ $\upmu$m, the resonances are separated by a photonic band, indicating that the regions of  $\eeff(f) < 0$ and $\meff(f) < 0$ do not overlap. 
 
-An attempt to further reduce the frequency of the electric resonance to obtain negative index of refraction $\Neff'<0$ in the region of overlap, however, leads to confusing results (cyan curves in Fig. \ref{fg_emSRR_icr}). 
+However an attempt to reduce the frequency of the electric resonance further, in order to obtain negative index of refraction $\Neff'<0$ in the region of overlap, leads to confusing results (cyan curves in Fig. \ref{fg_emSRR_icr}). 
 For $\rho_c \in \langle10, 16\rangle$ $\upmu$m, the scattering parameters method retrieves apparently erroneous spectra with two distinct band gaps, but without any individual resonance.
 A more detailed parametric scan through these problematic values of $\rho_c$ can be found in Fig. \ref{fg_emSRR_icrscan}.
 
@@ -499,7 +499,7 @@ A more detailed parametric scan through these problematic values of $\rho_c$ can
 \begin{overpic}[width=0.48\textwidth]{img-meep/emSRR_inner_capacitor_radius_scan_HR_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}  
 \end{figure}
 
-The effective parameters retrieved by the s-parameters method become easy to interpret for $\rho_c \geq 18$ $\upmu$m. The antiparallel resonance at 690~GHz is again well separated from the magnetic one, which remains near its original frequency (dark blue curves in Fig. \ref{fg_emSRR_icr}). Further explanation of these results is beyond the capabilities of the scattering parameters method, and necessitate the more expensive computational approach using the current-driven homogenisation (CDH) method.
+The effective parameters retrieved by the s-parameters method become easy to interpret for $\rho_c \geq 18$ $\upmu$m. The antiparallel resonance at 690~GHz is again well separated from the magnetic one, which remains near its original frequency (dark blue curves in Fig. \ref{fg_emSRR_icr}). Further explanation of these results is beyond the capabilities of the scattering parameters method, and it necessitates the more expensive computational approach using the current-driven homogenisation (CDH) method.
 
 %}}}
 \begin{figure}[t] \caption[Dispersion curves for the electro-magnetic resonator for $\rho_c\in{6,8}$ $\upmu$m (comparison of the CDH and s-parameter results)]{Current-driven homogenisation results for the combined electric-magnetic resonator, differing by the inner capacitor radius \textbf{(a)} $\rho_c = 6$ $\mu$m, \textbf{(b)} $\rho_c = 8$ $\mu$m.} \label{fg_cdh1} \centering %{{{
@@ -519,9 +519,10 @@ The effective parameters retrieved by the s-parameters method become easy to int
 \paragraph{Current-driven homogenisation and spatial dispersion}%{{{
 CDH results for the same structure parameters, $\rho_c\in\{6,8,10,18\}$ $\upmu$m are presented in Figs. \ref{fg_cdh1} and \ref{fg_cdh2}. For comparison, the dispersion curves corresponding to the $\Neff'(f)$ retrieved by the scattering parameters method are shown by green lines.
 
-For $\rho_c=6$ $\upmu$m, both retrieval methods yield relatively similar results, and they correctly identify two indirect band gaps corresponding to the magnetic and antiparallel electric resonances, respectively. The match is not as good as in Fig. \ref{fg_cdh5}, though. Namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (c.f. page \pageref{cdhadvantages}).
+For $\rho_c=6$ $\upmu$m, both retrieval methods yield relatively similar results, and they identify correctly two indirect band gaps, the first of which corresponds to the magnetic resonance, and the second to the antiparallel electric one. The match is not as good as in Fig. \ref{fg_cdh5}, though. Namely the magnetic resonance around 800~GHz appears somewhat wider when retrieved by the s-parameters method, compared to CDH. The deviation can be attributed to the structure being surrounded by vacuum instead of sensing the near fields of the surrounding cells (c.f. page \pageref{cdhadvantages}).
 
-The value of $\rho_c=8$ $\upmu$m used for the next plot was not chosen randomly, since for this inner capacitor radius, the spatial dispersion starts to affect substantially the dispersion curve of the second photonic band. It starts in the $\mathbf \Gamma$ point at 794~GHz with a positive group velocity and reaches its maximum of 890~GHz, but with growing $K$, the group velocity changes its sign and the band ends in the $\mathbf X$ point at ca. 887~GHz. At a given frequency between 887 and 890~GHz, two solutions of the wave equation exist that differ merely by the wavevector. The s-parameters method has no means of distinguishing them, and accordingly, the retrieved dispersion curve deviates from that retrieved by CDH.
+
+The value of $\rho_c=8$ $\upmu$m used for the right panel of Fig. \ref{fg_cdh1} was not chosen randomly, since for this inner capacitor radius, the spatial dispersion starts to affect substantially the dispersion curve of the second photonic band. It starts in the $\mathbf \Gamma$ point at 794~GHz with a positive group velocity and reaches its maximum of 890~GHz, but with growing $K$, the group velocity changes its sign and the band ends in the $\mathbf X$ point at ca. 887~GHz. At a given frequency between 887 and 890~GHz, two solutions of the wave equation exist that differ merely by the wavevector. The s-parameters method has no means of distinguishing them, and accordingly, the retrieved dispersion curve deviates from that retrieved by CDH.
 
 The spatial dispersion is even more evident in Fig. \ref{fg_cdh2}, where the frequencies of the second photonic band in the $\mathbf \Gamma$ and $\mathbf X$ points come close to each other, amounting to 784 and 795~GHz, respectively. The central maximum of the band is on 828~GHz, which explains why the s-parameters	method no longer correctly determines the dispersion curve shape, nor it identifies any of the resonances.
 
@@ -551,7 +552,7 @@ A similar failure of the s-parameters method in homogenisation of an array of SR
 
 For particular values of the inner capacitor radius $\rho_c \in \langle8,16\rangle$ $\upmu$m, the second photonic band supports simultaneously a wave of group velocity collinear with the phase velocity, and an \textit{additional wave}\index{additional wave} with a higher wavenumber and opposite direction of these velocities. 
 
-The interface of this metamaterial with vacuum should exhibit negative refraction, provided the auxiliary boundary conditions are arranged to couple all energy exclusively to the described additional wave with a relatively high Bloch's wavevector,  The index of refraction, however, is not sufficient for description of this kind of metamaterial -- even for propagation nearly parallel to the optical axis.
+The interface of this metamaterial with vacuum should exhibit negative refraction, provided the auxiliary boundary conditions are arranged to couple all energy exclusively to the described additional wave with a relatively high Bloch's wavevector. In any other case, the single-valued index of refraction is not sufficient for description of this kind of metamaterial -- even for propagation nearly parallel to the optical axis.
 
 %}}}
 \FloatBarrier %====================================================================================================
@@ -579,12 +580,12 @@ An artificial dielectric consisting of dielectric particles with effective perme
 \label{negn_diel}
 
 
-Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908beitrage}, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments. Dipole moments of many others are nonzero, but are not oriented parallel to the fields of the incident wave, and do not couple to the electromagnetic wave. In the spectrum of an array of dielectric spheres, one can clearly identify an alternating series of electric and magnetic resonances, of which the first three are easy to identify in Fig. \ref{fg_Spheres_lossscan}. Each of them manifests itself as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance \index{antiresonance}  in $\eeff(f)$, or vice versa.
+Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908beitrage}, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments. Dipole moments of many others are nonzero, but are not oriented parallel to the fields of the incident wave, and do not couple to the electromagnetic wave. In the spectrum of an array of dielectric spheres, one can identify clearly an alternating series of electric and magnetic resonances, of which the first three are easy to identify in Fig. \ref{fg_Spheres_lossscan}. Each of them manifests itself as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance \index{antiresonance}  in $\eeff(f)$, or vice versa.
 %% todo cite vendik, Zhao etc. from the directory
 
 %}}}
 \begin{figure}[h!] %fg_Spheres_lossscan %{{{
-	\caption[Dielectric spheres $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{\textbf{(a)} Amplitude of reflectance, \textbf{(b)} amplitude of transmittance and \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$ of TiO$_{2}$ spheres with varied loss compared to the natural one from Ref. \cite{baumard1977_epsilon_TiO2}; sphere radius $\rho = 30$ $\mu$m, unit cell size $a=100$ $\upmu$m.} \label{fg_Spheres_lossscan} \centering \vspace{-0.0\textwidth} 
+	\caption[Dielectric spheres $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{\textbf{(a)} Amplitude of reflectance, \textbf{(b)} amplitude of transmittance, \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$, \textbf{(d)} effective permittivity $\eeff = \eeff'+\ii\eeff''$ and \textbf{(e)} effective permeability $\meff = \meff'+\ii\meff''$  of TiO$_{2}$ spheres with varied loss compared to the natural one from Ref. \cite{baumard1977_epsilon_TiO2}; sphere radius $\rho = 30$ $\mu$m, unit cell size $a=100$ $\upmu$m.} \label{fg_Spheres_lossscan} \centering \vspace{-0.0\textwidth} 
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/Spheres_lossscan_r.pdf}  \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\
 \begin{overpic}[width=0.85\textwidth]{img-meep/Spheres_lossscan_t.pdf}  \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.060\textwidth}\\
@@ -595,11 +596,11 @@ Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908b
 \end{figure}
 %}}}
 \paragraph{Dielectric losses}%{{{
-Unlike split-ring resonators, where the high-frequency dissipative losses depend on many factors such as the metal surface, eddy currents and fine details in the geometry, the losses in dielectric resonators can be more accurately modelled and their effect can be reliably computed by the FDTD simulation. 
+Unlike split-ring resonators, where the high-frequency dissipative losses depend on many factors such as the metal surface, eddy currents and fine details in the geometry, the losses in dielectric resonators can be more accurately modelled and their effect can be computed reliably by the FDTD simulation. 
 
-We used a realistic model \cite{baumard1977_epsilon_TiO2} of permittivit of polycrystalline rutile (TiO$_{2}$), which was already plotted in Fig. \ref{fg_tio2eps}. In the terahertz range it counts among high-permittivity dielectrics with relatively low losses compared to similar materials:
+We used a realistic model \cite{baumard1977_epsilon_TiO2} of permittivity of polycrystalline rutile (TiO$_{2}$), which was already plotted in Fig. \ref{fg_tio2eps}. In the terahertz range it counts among high-permittivity dielectrics with relatively low losses compared to similar materials:
 \begin{equation}\epsrl(f=1\text{ THz}) = 94.2-2.43\text{i}. \label{eq_tio2}\end{equation}
-The actual permittivity of the experimentally measured samples depends on their preparation, in particular the volume fraction of microscopic voids. For such composites, Ref. \cite{baumard1977_epsilon_TiO2} gives only the ratio of $\epsrl''/\epsrl'$, but since $\epsrl'$ could be determined from the resonant frequencies in the experimental spectra, also the imaginary part could be easily computed.
+The actual permittivity of the experimentally measured samples depends on their preparation, in particular the volume fraction of microscopic voids. For such composites, Ref. \cite{baumard1977_epsilon_TiO2} gives only the ratio of $\epsrl''/\epsrl'$, but since $\epsrl'$ could be determined from the resonant frequencies in the experimental spectra, also the imaginary part could be inferred.
 
 The reflectance, transmittance and effective parameters of rutile spheres with radius $\rho=15\;\upmu$m are compared in Fig. \ref{fg_Spheres_lossscan}. Three different levels of losses were considered. The realistic value was denoted as 100 \%, and it was accompanied with hypothetic low-loss dielectrics with the same real part of $\epsrl'$, but the imaginary part $\epsrl''$ artificially reduced to  10 \% and 1 \%. 
 
@@ -612,7 +613,7 @@ At the right hand side of the plot, for $f \sim a/(2c) \approx$~1.5~THz, the str
 
 %}}}
 \begin{figure}[h!] %% SphereWire_principles %{{{
-	\caption[Dielectric spheres with wires $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{Amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$ of TiO$_{2}$ spheres, wire grid array, a combined negative-index structure and its modification  with varied loss compared to the natural one from Ref. \cite{baumard1977_epsilon_TiO2}; sphere radius $\rho = 30 \upmu$m, unit cell size $a=100$ $\upmu$m.} \label{fg_SphereWire_principles} \centering \vspace{-3mm} %% TODO
+	\caption[Dielectric spheres with wires $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{Amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance, \textbf{(c)} effective index of refraction $\Neff = \Neff' + \ii \Neff''$, \textbf{(d)} effective permittivity $\eeff = \eeff'+\ii\eeff''$ and \textbf{(e)} effective permeability $\meff = \meff'+\ii\meff''$  of TiO$_{2}$ spheres, wire grid array, a combined negative-index structure and its modification  with varied loss compared to the natural one from Ref. \cite{baumard1977_epsilon_TiO2}; sphere radius $\rho = 30$ $\upmu$m, unit cell size $a=100$ $\upmu$m.} \label{fg_SphereWire_principles} \centering \vspace{-3mm} %% TODO
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/SphereWire_principles_r.pdf}  \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.058\textwidth}\\
 \begin{overpic}[width=0.85\textwidth]{img-meep/SphereWire_principles_t.pdf}  \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.058\textwidth}\\
@@ -624,14 +625,14 @@ At the right hand side of the plot, for $f \sim a/(2c) \approx$~1.5~THz, the str
 
 %}}}
 \paragraph{Negative-index metamaterial based on dielectric spheres} %{{{
-An important property of the periodic sphere array is its nearly \textit{isotropic}\index{isotropic} electromagnetic behaviour, i.e. independence of its behaviour on the wave polarisation, which is approximately maintained at low frequencies even when the spheres are arranged into a periodic lattice, provided that the spheres are too close. 
+An important property of the periodic sphere array is its nearly \textit{isotropic}\index{isotropic} electromagnetic behaviour, i.e. independence of its behaviour on the wave polarisation, which is approximately maintained at low frequencies even when the spheres are arranged into a periodic lattice, provided that the spheres are not too close. 
 % todo Cai_Zhu2008-Diel_resonators_wires.pdf
 
 Following the approach used to build a metamaterial with a negative refractive index from SRRs, it is possible to combine the sphere array with an array of wires to introduce negative permittivity and permeability simultaneously. In order to maintain the approximate isotropy of the resulting structure, the wires may form a two- or three-dimensional mesh. This modification does not make any appreciable change in the low-frequency behaviour. % todo link to the wire mesh simulation
 
 Fig. \ref{fg_SphereWire_principles} compares the already commented spectra for the sphere lattice (red line), and wire grid (blue line) with the spectra for the compound structure, which is sketched in Fig. \ref{fg_spherewire_sketch}a,c. At $f>0$, the wire grid does not reflect all energy, leading again to formation of the Fano resonance profile. 
 
-Notice in \ref{fg_SphereWire_principles} that the Fano resonances of structures with and without the wire mesh have a peculiar complementary shape. The wave reflected from the electric dipole of the wire mesh has an opposite sign than that reflected from the electric dipole of dielectric particles. Its sign determines whether the interference with the second component, scattered by the Mie resonances, would be constructive, or destructive. 
+Notice in \ref{fg_SphereWire_principles} that the Fano resonances of structures with and without the wire mesh have a peculiar complementary shape. The wave reflected from the electric dipole of the wire mesh has the opposite sign than that reflected from the electric dipole of dielectric particles. Its sign determines whether the interference with the second component, scattered by the Mie resonances, would be constructive, or destructive. 
 
 A band of negative index of refraction is formed above the magnetic Mie resonance, between 510 and 550~GHz. When the realistic model of losses in TiO$_2$ is used, the maximum figure of merit $\Neff'/\Neff'' \approx 6$ around the centre of the photonic band. This means that the metamaterial, in the optimum of the negative-index band, reduces the wave amplitude to $e^{1/6} \approx 0.84$ within one wavelength $\lambda$. 
 When a wave propagates over a distance of ca. $40\lambda$ in the metamaterial, the amplitude drops to $10^{-3}$ and the wave energy to $10^{-6}$ of the incident value. The applicability of such a metamaterial for building a macroscopic optical device is questionable. % todo \cite{zhao2009mie}
@@ -791,7 +792,7 @@ This band gap starts in the $X1$ point, where each unit cell is divided by one n
 %\end{figure}
 %}}}
 \begin{figure}[ht] %{{{ rodsphere_comparison
-	\caption[Dielectric rods parallel to the magnetic field and spheres $|r|$ and $Neff$ (retrieved by the s-parameter method)]{Comparison of \textbf{(a)} transmittance and \textbf{(b)}  effective index of refraction $\Neff$ for arrays of dielectric spheres (with radius $\rho_s=30$ $\mu$m) and of dielectric rods (with radius $\rho_r=19$ $\mu$m) in a 100 $\upmu$m unit cell, both made of TiO$_2$. The choice of radii used ensures the same volume filling fraction. } \label{fg_rodsphere_comparison} \centering \vspace{-3mm}
+	\caption[Dielectric rods parallel to the magnetic field and spheres $|r|$ and $Neff$ (retrieved by the s-parameter method)]{Comparison of \textbf{(a)} transmittance and \textbf{(b)}  effective index of refraction $\Neff$ for arrays of dielectric spheres (with radius $\rho_s=30$ $\mu$m) and of dielectric rods (with radius $\rho_r=19$ $\mu$m) in a 100$\mu$m unit cell, both made of TiO$_2$. The choice of radii used ensures the same volume filling fraction. } \label{fg_rodsphere_comparison} \centering \vspace{-3mm}
 \begin{tabular}{r}
 \begin{overpic}[width=0.95\textwidth]{img-meep/rodsphere_comparison_t.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\
 \begin{overpic}[width=0.96\textwidth]{img-meep/rodsphere_comparison_n.pdf} \put (-1,27) {\textbf{(b)}} \end{overpic}\vspace{-0.060\textwidth}\\
@@ -820,7 +821,7 @@ In spite of the strength of the first resonance, the corresponding region of $\e
 
 %}}}
 \begin{figure}[h!]  %{{{ erods_acomparison
-	\caption[Dielectric rods parallel to the electric field $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for a rod array with constant radius $\rho = 10$ $\mu$m, dielectric permittivity  and grid resolution of 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm} 
+	\caption[Dielectric rods parallel to the electric field $|r|$, $|t|$, $\Neff$, $\eeff$ and $\meff$ (retrieved by the s-parameter method)]{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$, \textbf{(d)} effective permittivity $\eeff = \eeff'+\ii\eeff''$ and \textbf{(e)} effective permeability $\meff = \meff'+\ii\meff''$  for a rod array of realistic TiO$_{2}$ dielectric model with constant radius $\rho = 10$ $\mu$m and grid resolution of 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm} 
 %% NOTE: if realistic materials are needed, erods_acomparison-loLoss_r.pdf can be substituted for  erods_acomparison_r.pdf etc.
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/erods_acomparison-loLoss_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\ 
