--- a/theory.tex
+++ b/theory.tex
@@ -1093,7 +1093,7 @@ The success in prohibiting the light to propagate along one direction inspired t
 
 The structure, known as \textit{yablonovite}\index{yablonovite}, was designed for microwaves, since it was made by precise mechanical drilling into a plastic cube. Different technologies were developed in the 1990s in attempts to fabricate photonic crystals operating  efficiently in the optical range, e.g. a similar approach based on X-ray nanolitography (see Fig. \ref{fg_phc_patents}a), stacking of structured layers (Fig. \ref{fg_phc_patents}b), direct laser writing in a resin or self-assembly of dielectric spheres into opal-like lattice.
 
-The demands for achieving a complete three-dimensional band gap can be reduced when a singly or doubly periodic modulation is etched into an index-guiding dielectric slab, as was developed by Zengerle in the late 1970s \cite{zengerle1987light}. Planar structures are also much easier to fabricate using existing technologies such as photolitography.  
+The demands for achieving a complete three-dimensional band gap can be reduced when a singly or doubly periodic modulation is etched into an index-guiding dielectric slab, as was developed by Zengerle in the 1970s and 1980s \cite{zengerle1987light}. Planar structures are also much easier to fabricate using existing technologies such as photolitography.  
 % "Any dielectric material can be used to fabricate a photonic crystal with a sizeable and robust complete photonic bandgap (CPBG) in three dimensions, as long as small metal inclusions can be added." \cite{moroz2002metallo}
 
 %}}}
@@ -1122,7 +1122,7 @@ The same mechanism causing the radio wave reflection from the dilute plasma in t
 
 \textit{Negative permeability}\index{permeability!negative} manifests itself similarly to the electrodynamic point of view, but is observed much less often, typically above magnetic resonances, \textit{magnons}\index{magnons!bulk}.
 
-Theoretical investigation of electrodynamics in media with a \textit{negative index of refraction}\index{index of refraction!negative, history of}, or slightly more generally, those with antiparallel group and phase velocities (c.f. Chapter \ref{chap_vfvg}), can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction, boardman2005negative}. Mandelshtam's lectures on optics illustrated negative refraction of light in the 1940s \cite{mandelstam1971lectures} and were further complemented, among others, in 1950s by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \v{C}erenkov radiation \cite{pafomov1956cerenkov}. 
+Theoretical investigation of electrodynamics in media with a \textit{negative index of refraction}\index{index of refraction!negative, history of}, or slightly more generally, those with antiparallel group and phase velocities (c.f. Chapter \ref{chap_vfvg}), can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction, boardman2005negative}. Mandelshtam's lectures on optics illustrated negative refraction of light in the 1940s \cite{mandelstam1971lectures} and were further complemented, among others, in 1957 by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \v{C}erenkov radiation \cite{pafomov1956cerenkov}. 
 
 It was Veselago's review of the negative-index homogeneous media from 1968 that received later significantly wider attention in the literature \cite{veselago1968}. Veselago used % is he first?
 the term of \textit{left-handed media}\index{media!left-handed} and speculated to what extent they might exist in the nature, but he did not discuss the way of realizing such media, nor the more general theory of the spatial dispersion which may also lead to natural negative refraction.
